--- a/client/components/core/_main.scss
+++ b/client/components/core/_main.scss
@@ -62,7 +62,7 @@ $share-button-size: 38px;
     & > :not(.graphic) {
       max-width: 625px;
       margin: 1em auto;
-      padding: 0 0.75em;
+      // padding: 0 0.75em;
     }
   }
 }
