--- a/client/components/card/_card.scss
+++ b/client/components/card/_card.scss
@@ -56,7 +56,7 @@
     & a:hover {
     color: #807970 !important;
     }
-}
+  }
 
   &__image {
     margin: 1em 0;
@@ -65,12 +65,30 @@
     img {
       width: 100%;
     }
+
   }
+
+  p[style*="text-align:right;"]{
+    margin-top: 1.5em;
+  }
+
+  p[style*="text-align:right;"] > a:first-child:last-child {
+      color: getColor('grey-tint5');
+      @include oTypographySans(m);
+      border-bottom-color: transparent;
+      &:hover {
+        color:#807970;
+    }
+  }
+
+
+
+
 
   &__onward-headline {
     position: relative;
     font-size: 1.1em !important;
-    margin: 1.6em 0 1.5em;
+    margin: 1em 0 1.5em;
     @include oTypographySansBold(m);
     color: getColor('grey-tint5');
 
