--- a/client/components/card/_card.scss
+++ b/client/components/card/_card.scss
@@ -79,6 +79,25 @@
       &:hover {
         color:#807970;
     }
+
+    &:after {
+      background-image: url(https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1:arrow-right?source=o-icons&tint=%23000000,%23000000&format=svg);
+    background-image: url(https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1:arrow-right?source=o-icons&tint=%23000000,%23000000&format=png&width=30)\9;
+    width: 30px;
+    height: 30px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 50%;
+    background-color: transparent;
+    vertical-align: baseline;
+    content: '';
+    display: inline-block;
+    position: relative;
+    top: 10px;
+    right: -13px;
+    margin-left: -13px;
+    margin-top: -10px;
+    }
   }
 
 
