--- a/client/components/card/template.html
+++ b/client/components/card/template.html
@@ -13,7 +13,7 @@
     </figure>
     <div class="card-position__body">
       {{ i.copy | safe }}
-      {% if i.linkurl %}<p style="text-align:right;"><a href="{{ i.linkurl }}">Full profile &raquo;</a></p>{% endif %}
+      {% if i.linkurl %}<p style="text-align:right;"><a href="{{ i.linkurl }}">Full profile</a></p>{% endif %}
       {% if i.links.length > 0 %}
       <div class="card-position__onward-headline">
         More on {{i.name}}:
