--- a/client/components/card/_card.scss
+++ b/client/components/card/_card.scss
@@ -1,3 +1,4 @@
+
 .follow-button-form {
   display: inline;
 }
@@ -40,14 +41,30 @@
   border-bottom-left-radius: 4px;
 
   &__position {
+    margin: 1em auto 0 !important;
+    color: #333;
+    font-size: 1.9em !important;
+
+     @include oGridRespondTo(S) {
+    font-size: 2.5em !important;
     margin: 1em auto .5em !important;
+    }
+
   }
 
   &__name {
     @include oTypographySansBold(m);
     color: getColor('grey-tint5');
+    font-size: 1.4em !important;
+    letter-spacing: 0;
     margin-top: .1em !important;
     margin-bottom: .1em !important;
+    
+      @include oGridRespondTo(S) {
+    font-size: 1.8em !important;
+    letter-spacing: .01em;
+    }
+
     & a {
       color: getColor('grey-tint5');
       border-bottom-color: transparent;
@@ -138,3 +155,6 @@
     }
   }
 }
+
+
+
