💄tweak css for small screen
Add o-grid-container class to article-body
Reduce card padding for small screen
Add margin on follow on tweaks

--- a/views/layout.html
+++ b/views/layout.html
@@ -36,7 +36,7 @@
             </header>
           </div>
         </div>
-        <div class="article-body o-typography-body-wrapper" itemprop="articleBody">
+        <div class="article-body o-typography-body-wrapper o-grid-container" itemprop="articleBody">
 
           {% block article_body %}{% endblock %}
 
